[tool.poetry]
name = "cados_api"
version = "1.0.0"
description = "api"
authors = ["macourage18 <macourage17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9 || ^3.10 || ^3.11"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
